# rust-elrpc

./: .gitignore  Cargo.toml  README.md  RUST-ELRPC-SPEC.md  debug_test.rs  test_both.sh
examples/: echo_client.rs  echo_server.rs  simple_demo.rs
src/: client.rs  error.rs  lib.rs  message.rs  protocol.rs  registry.rs  server.rs  server_handler.rs  types.rs  uid.rs
tests/: comprehensive_tests.rs  integration_tests.rs  protocol_tests.rs  stress_tests.rs
