[package]
name = "rust-elrpc"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of EPC (Emacs RPC) protocol"
license = "GPL-3.0-or-later"
keywords = ["emacs", "rpc", "epc", "s-expression"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[[bin]]
name = "debug_test"
path = "debug_test.rs"
