[package]
name = "elrpc"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Emacs RPC (EPC) protocol"
license = "MIT OR Apache-2.0"
authors = ["Claude <noreply@anthropic.com>"]
repository = "https://github.com/eval-exec/rust-elrpc"
keywords = ["emacs", "rpc", "epc", "s-expression", "lexpr"]
categories = ["network-programming", "api-bindings"]

[dependencies]
lexpr = { path = "./lexpr-rs/lexpr", version = "0.3.0" }
serde-lexpr = { path = "./lexpr-rs/serde-lexpr", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"


[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
